[package]
name = "bevy_camera_shake"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Peterson"]
description = "Adds camera shake to your cameras in Bevy Games"
repository = "https://github.com/Andrewp2/bevy_camera_shake"
keywords = ["gamedev", "camera"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
bevy = "0.8.1"

[dev-dependencies]
rand = "0.8.5"
noise = "0.7.0"

[workspace]
resolver = "2"