[package]
name = "bevy_camera_shake"
version = "7.0.0"
edition = "2021"
authors = ["Andrew Peterson"]
description = "Adds camera shake to your cameras in Bevy Games"
repository = "https://github.com/Andrewp2/bevy_camera_shake"
keywords = ["gamedev", "camera"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bevy = "0.16"

[dev-dependencies]
rand = "0.8.5"
noise = "0.8.2"

[workspace]
resolver = "2"
